# EMA

./: .gitignore  README.md
firmware/: Makefile  README.md  install_dp.sh  startup_stm32f103c8tx.s
firmware/Core/Inc/: stm32f1xx_hal_conf.h
firmware/Inc/: common.h  define.h  delay.h  dht22.h  guva.h  main.h  mq7.h  sds011.h  sx1278.h  uart.h
firmware/Src/: common.c  delay.c  dht22.c  guva.c  main.c  mq7.c  sds011.c  stm32f1xx_it.c  sx1278.c  uart.c
gateway/: CMakeLists.txt
gateway/main/: CMakeLists.txt  build_vn_province.py  esp32_spi_master.c  esp32_spi_slave.c  fake_node.c  fake_node.h  index.html  lora.c  lora.h  main.c  mqtt.c  mqtt.h  my_first_app.c  province_lut.h  provision.c  provision.h  reverse_geocode.c  reverse_geocode.h  stm32.c  test.c  test_province.c  timesync.c  timesync.h  wifi_ap.c  wifi_ap.h  wifi_sta.c  wifi_sta.h
mb/: package-lock.json
mobile/: App.tsx  babel.config.js  package-lock.json  package.json
mobile/constants/: index.js  provinces.js  routes.js  utilities.js
mobile/src/api/: ThingsBoardAPI.js  WeatherAPI.js  index.js
mobile/src/components/: Parabol.js
mobile/src/screens/: EnvDashboardScreen.js  HomeScreen.js  WeatherScreen.js
